// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component.NoWallets should render correctly (no selected wallet) 1`] = `
<NoWallets___StyledFlex
  alignItems="center"
  flexDirection="column"
  justifyContent="center"
>
  <Heading4>
    <FormattedMessage
      defaultMessage="Please select a wallet from the wallets menu."
      id="components.Home.no_active_wallet_message"
      values={Object {}}
    />
  </Heading4>
  <Heading4
    my={1}
  >
    - 
    <FormattedMessage
      defaultMessage="or"
      id="components.Home.or"
      values={Object {}}
    />
     -
  </Heading4>
  <Heading4>
    <FormattedMessage
      defaultMessage="Start creating one from here:"
      id="components.Home.create_wallet_prompt"
      values={Object {}}
    />
  </Heading4>
  <CreateWalletButton
    history={
      Object {
        "push": [MockFunction],
      }
    }
    mt={3}
    p={3}
  />
</NoWallets___StyledFlex>
`;

exports[`component.NoWallets should render correctly (no wallets) 1`] = `
<NoWallets___StyledFlex
  alignItems="center"
  flexDirection="column"
  justifyContent="center"
>
  <Heading4>
    <FormattedMessage
      defaultMessage="Unfortunately you don’t have any wallets 😢"
      id="components.Home.no_wallets_message"
      values={Object {}}
    />
  </Heading4>
  <Heading4
    my={1}
  >
    - 
    <FormattedMessage
      defaultMessage="or"
      id="components.Home.or"
      values={Object {}}
    />
     -
  </Heading4>
  <Heading4>
    <FormattedMessage
      defaultMessage="Start creating one from here:"
      id="components.Home.create_wallet_prompt"
      values={Object {}}
    />
  </Heading4>
  <CreateWalletButton
    history={
      Object {
        "push": [MockFunction],
      }
    }
    mt={3}
    p={3}
  />
</NoWallets___StyledFlex>
`;
